fix: placeholder for date inputs on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,22 @@
 
 }
 
+input[type="date"]:invalid::-webkit-datetime-edit {
+    color: transparent;
+}
+
+input[type="date"]:before {
+    content: attr(placeholder);
+    width: 100%;
+    color: #999; /* Your placeholder color */
+    margin-right: 0.5em;
+}
+
+input[type="date"]:focus:before,
+input[type="date"]:valid:before {
+    display: none;
+}
+
 ul {
     display: block;
     list-style-type: none;
